@@ -91,7 +91,7 @@ static void* parse_buffer_arg (gcv_object_t *arg_, size_t *size) {
 }
 /* DANGER: the return value is invalidated by GC!
  can trigger GC */
-static void* check_struct_data (object type, object arg, socklen_t *size) {
+static void* check_struct_data (object type, object arg, SOCKLEN_T *size) {
   object vec = TheStructure(check_classname(arg,type))->recdata[1];
   *size = Sbvector_length(vec);
   return (void*)TheSbvector(vec)->data;
@@ -107,7 +107,7 @@ DEFUN(RAWSOCK:RESIZE-BUFFER,new-size) {
 }
 
 DEFUN(RAWSOCK:SOCKADDR-FAMILY, sa) {
-  socklen_t size;
+  SOCKLEN_T size;
   struct sockaddr *sa =
     (struct sockaddr*)check_struct_data(`RAWSOCK::SOCKADDR`,popSTACK(),&size);
   VALUES2(fixnum(sa->sa_family),fixnum(size));
@@ -251,7 +251,7 @@ DEFUN(RAWSOCK:SOCKETPAIR,domain type protocol) {
  DANGER: the return value is invalidated by GC!
  can trigger GC */
 void optional_sockaddr_argument (gcv_object_t *arg, struct sockaddr**sa,
-                                 socklen_t *size) {
+                                 SOCKLEN_T *size) {
   if (nullp(*arg)) *sa = NULL;
   else {
     if (eq(T,*arg)) *arg = make_sockaddr();
@@ -263,7 +263,7 @@ DEFUN(RAWSOCK:ACCEPT,socket sockaddr) {
   rawsock_t sock = posfixnum_to_L(check_posfixnum(STACK_1));
   int retval;
   struct sockaddr *sa = NULL;
-  socklen_t sa_size;
+  SOCKLEN_T sa_size;
   optional_sockaddr_argument(&STACK_0,&sa,&sa_size);
   /* no GC after this point! */
   SYSCALL(retval,sock,accept(sock,sa,&sa_size));
@@ -273,7 +273,7 @@ DEFUN(RAWSOCK:ACCEPT,socket sockaddr) {
 DEFUN(RAWSOCK:BIND,socket sockaddr) {
   rawsock_t sock = posfixnum_to_L(check_posfixnum(STACK_1));
   int retval;
-  socklen_t size;
+  SOCKLEN_T size;
   struct sockaddr *sa =
     (struct sockaddr*)check_struct_data(`RAWSOCK::SOCKADDR`,STACK_0,&size);
   /* no GC after this point! */
@@ -284,7 +284,7 @@ DEFUN(RAWSOCK:BIND,socket sockaddr) {
 DEFUN(RAWSOCK:CONNECT,socket sockaddr) {
   rawsock_t sock = posfixnum_to_L(check_posfixnum(STACK_1));
   int retval;
-  socklen_t size;
+  SOCKLEN_T size;
   struct sockaddr *sa =
     (struct sockaddr*)check_struct_data(`RAWSOCK::SOCKADDR`,STACK_0,&size);
   /* no GC after this point! */
@@ -296,7 +296,7 @@ DEFUN(RAWSOCK:GETPEERNAME,socket sockaddr) {
   rawsock_t sock = posfixnum_to_L(check_posfixnum(STACK_1));
   int retval;
   struct sockaddr *sa = NULL;
-  socklen_t sa_size;
+  SOCKLEN_T sa_size;
   optional_sockaddr_argument(&STACK_0,&sa,&sa_size);
   /* no GC after this point! */
   SYSCALL(retval,sock,getpeername(sock,sa,&sa_size));
@@ -307,7 +307,7 @@ DEFUN(RAWSOCK:GETSOCKNAME,socket sockaddr) {
   rawsock_t sock = posfixnum_to_L(check_posfixnum(STACK_1));
   int retval;
   struct sockaddr *sa = NULL;
-  socklen_t sa_size;
+  SOCKLEN_T sa_size;
   optional_sockaddr_argument(&STACK_0,&sa,&sa_size);
   /* no GC after this point! */
   SYSCALL(retval,sock,getsockname(sock,sa,&sa_size));
@@ -352,7 +352,7 @@ DEFUN(RAWSOCK:RECVFROM, socket buffer address \
   struct sockaddr *sa = NULL;
   void *buffer;
   size_t buffer_len;
-  socklen_t sa_size;
+  SOCKLEN_T sa_size;
   STACK_1 = check_buffer_arg(STACK_1);
   optional_sockaddr_argument(&STACK_0,&sa,&sa_size);
   /* no GC after this point! */
@@ -367,7 +367,7 @@ DEFUN(RAWSOCK:RECVMSG,socket message &key MSG_PEEK MSG_OOB MSG_WAITALL) {
   int flags = recv_flags();
   rawsock_t sock = posfixnum_to_L(check_posfixnum(STACK_1));
   int retval;
-  socklen_t size;
+  SOCKLEN_T size;
   struct msghdr *message =
     (struct msghdr*)check_struct_data(`RAWSOCK::MSGHDR`,STACK_0,&size);
   SYSCALL(retval,sock,recvmsg(sock,message,flags));
@@ -404,7 +404,7 @@ DEFUN(RAWSOCK:SENDMSG,socket message &key MSG_OOB MSG_EOR) {
   int flags = send_flags();
   rawsock_t sock = posfixnum_to_L(check_posfixnum(STACK_1));
   int retval;
-  socklen_t size;
+  SOCKLEN_T size;
   struct msghdr *message =
     (struct msghdr*)check_struct_data(`RAWSOCK::MSGHDR`,STACK_0,&size);
   SYSCALL(retval,sock,sendmsg(sock,message,flags));
@@ -419,7 +419,7 @@ DEFUN(RAWSOCK:SENDTO, socket buffer address &key MSG_OOB MSG_EOR) {
   struct sockaddr *sa;
   void *buffer;
   size_t buffer_len;
-  socklen_t size;
+  SOCKLEN_T size;
   STACK_1 = check_buffer_arg(STACK_1);
   sa = (struct sockaddr*)check_struct_data(`RAWSOCK::SOCKADDR`,STACK_0,&size);
   /* no GC after this point! */
